# source-works

./: .gitignore  README.md  cli.py  create_test_pdfs.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
sourcerer_core/: main.py
sourcerer_core/domains/: __init__.py  files.py  pdf.py
sw_core/: main.py  pdf.py
sw_core/domains/: files.py  pdf.py
tests/: test_pdf_merger.py
